Created seperate profile for docbook building